A few bugs solved, paragraphs not aligned

--- a/css/grid.css
+++ b/css/grid.css
@@ -43,7 +43,7 @@ header {
 	grid-template-columns: repeat(4, 1fr);
 }
 .features h3,
-p {
+.features p {
 	grid-column: 1 / -1;
 }
 .features .features-image {
@@ -57,7 +57,7 @@ p {
 	grid-template-columns: repeat(3, 1fr);
 }
 .about h3,
-p {
+.about p {
 	grid-column: 1 / -1;
 }
 .about .about-button {
@@ -70,11 +70,17 @@ p {
 	grid-template-columns: repeat(3, 1fr);
 }
 .album h3,
-p {
+.album p {
 	grid-column: 1 / -1;
 }
 /*  Testimonials ---------======>>> */
 .testimonials {
 	grid-column: 2 / -2;
 	display: grid;
+}
+/*  Latestposts ---------======>>> */
+.latestposts {
+	grid-column: 2 / -2;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
 }
